# SDF-Rendering-Engine

./: CMakeLists.txt  Interactive_Renderer_V0.2.sln  LICENSE  README.md
02_Shaders/: 02_Shaders.vcxproj  02_Shaders.vcxproj.filters  DebugWindow.h  DebugWindow_DataVisual.cpp  DebugWindow_Iteration_Switches.cpp  DebugWindow_render.cpp  FileIO.cpp  FileIO.h  FunctionChooser.cpp  FunctionChooser.h  MyApp.cpp  MyApp.h  ShaderProg.h  TextEditor.cpp  TextEditor.h  TextEditor_CSG.cpp  TextEditor_build.cpp  TextEditor_fileio.cpp  TextEditor_render.cpp  gTimer.cpp  gTimer.h  imgui.ini  main.cpp  spheretrace_4.frag
02_Shaders/Shaders/: header.frag  main.frag  primitives.frag  shade.frag
02_Shaders/Shaders/SDF/: aprajafalva2.frag  csg2.frag
02_Shaders/Shaders/SphereTrace/: spheretrace_1.frag  spheretrace_2.frag  spheretrace_3 másolata.frag  spheretrace_3.frag
enc_temp_folder/f14ceb5a2d25c6118ce35b590b53b1f/: main.cpp
enc_temp_folder/feb06583543f5430b2a445b2c4379ca/: main.cpp
